Внесла правки в файлы css в соответствии с критериями оценивания

--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
     </header>
     <main class="container">
         <h1 class="page-title">Category Products</h1>
-           <div class="breadcrumbs">
+           <div class="breadcrumbs" tabindex="0">
             <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Home</a>
@@ -46,42 +46,42 @@
         <section class="products">
             <ul class="outline products-list">                
                 <li class="products-item first-product">
-                    <div class="container-link ">
+                    <div class="container-link" tabindex="0">
                     <a href="#">
                         <p class="title-link">APPAREL KIDS</p>
                     </a>
                 </div>
                 </li>
                 <li class="products-item second-product">
-                    <div class="container-link ">
+                    <div class="container-link" tabindex="0">
                         <a href="#">                           
                             <p class="title-link">HOLIDAY SHOP</p>
                         </a>
                     </div>                    
                 </li>
                 <li class="products-item third-product">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                        <a href="#">                        
                         <p class="title-link">TOYS</p>
                     </a>  
                     </div>
                 </li>
                 <li class="products-item fourth-product">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">                            
                             <p class="title-link">ACCESSORIES</p>
                         </a>
                     </div>
                 </li>
                 <li class="products-item fifth-product">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">                            
                             <p class="title-link">SALE</p>
                         </a>
                     </div>
                 </li>
                 <li class="products-item sixth-product">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                     <a href="#">                        
                         <p class="title-link">APPAREL ADULTS</p>
                     </a>
@@ -97,9 +97,9 @@
         </section>
     </main>
     <footer class="footer wrapper">
-        <div class="footer-content container">
-            <div class="footer-first-block">
-                <div class="footer-block-item">
+        <div class="footer-content container" tabindex="0">
+            <div class="footer-first-block" tabindex="0">
+                <div class="footer-block-item" tabindex="0">
                     <h4>Navigation</h4>
                     <nav>
                         <ul class="outline footer-list">
@@ -112,7 +112,7 @@
                         </ul>
                     </nav>
                 </div>
-            <div class="footer-block-item">
+            <div class="footer-block-item" tabindex="0">
                 <h4>Customer Information</h4>
                 <nav>
                     <ul class="outline footer-list">
@@ -125,7 +125,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="footer-block-item item_block">
+            <div class="footer-block-item item_block" tabindex="0">
                 <h4 >Connect</h4>
                 <form class="form-container"action="#" method="POST" class="">
                     <input name="mail" type="email" placeholder="Email">
@@ -163,12 +163,12 @@
                 </ul>
             </div>
         </div>    
-        <div class="footer-second-block">   
-            <div class="footer-copyright">
-                <div class="rating-item">
+        <div class="footer-second-block" tabindex="0">   
+            <div class="footer-copyright" tabindex="0">
+                <div class="rating-item" tabindex="0">
                     <p>Company Rating</p>
                 </div>
-                <div class="rating-item">
+                <div class="rating-item" tabindex="0">
                     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="#836E5B"/>
                     </svg>
@@ -185,10 +185,10 @@
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
                 </div>
-                <div class="copyright-item">   
+                <div class="copyright-item" tabindex="0">   
                     <p>Copyright © 2018 Dlk • Design Life Kids</p>
                 </div> 
-                <div class="copyright-item">
+                <div class="copyright-item" tabindex="0">
                     <a class="copyright-link" href="https://directline.digital/"> Web Design — Direct Line Development</a>
                 </div>
             </div>
