--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
     </header>
     <main class="container">
         <h1 class="page-title">Contact  Us</h1>
-        <div class="breadcrumbs">
+        <div class="breadcrumbs" tabindex="0">
             <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Home</a>
@@ -45,37 +45,37 @@
         </div>
         <section class="contacts-box">
             <form action="#" method="POST" class="contact-form">
-            <fieldset class="">
-                <div class="form-name">
+            <fieldset class="contact-container">
+                <div class="form-name" tabindex="0">
                     <label for="form-name" class="form-label">Name</label>
                     <input class="form-name" id="form-name" type="text" name="name" class="form-input" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
             <fieldset class="contact-wrapper">
-                <div class="contact-wrapper contact-block">  
+                <div class="contact-wrapper contact-block" tabindex="0">  
                     <label for="form-phone" class="form-label">Phone</label>                  
                     <input id="form-phone" type="tel" name="phone" class="form-input-phone" pattern="+7 (908) 296-13-78">                   
                 </div>
-                <div class="contact-wrapper contact-block">   
+                <div class="contact-wrapper contact-block" tabindex="0">   
                     <label for="form-email" class="form-label">Email</label>                 
                     <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
             <fieldset class="contact-wrapper">
-                <div>
+                <div tabindex="0">
                     <label for="form-message" class="form-label">Message</label>                    
                     <textarea id="form-message" type="text" name="message" class="form-textarea" cols="30" rows="3"></textarea>                    
                 </div>
             </fieldset>
             <fieldset >
-                <div class="checkbox">
+                <div class="checkbox" tabindex="0">
                     <input class="input"  id="form-agreement" type="checkbox" name="agreement">
                     <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
             </fieldset>
             <button class="button" type="submit">Submit</button>
         </form>                        
-            <div class="support">
+            <div class="support" tabindex="0">
                 <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
                 <p>Please use the form to contact us with your needs. Send us a message and we'll respond as soon as possible.</p>
                 <p class="support-item">An expert is waiting to help you!</p>
@@ -83,9 +83,9 @@
     </section>
     </main>
     <footer class="footer wrapper">
-        <div class="footer-content container">
-            <div class="footer-first-block">
-                <div class="footer-block-item">
+        <div class="footer-content container" tabindex="0">
+            <div class="footer-first-block" tabindex="0">
+                <div class="footer-block-item" tabindex="0">
                     <h4 class="">Navigation</h4>
                     <nav>
                         <ul class="outline footer-list">
@@ -98,7 +98,7 @@
                         </ul>
                     </nav>
                 </div>
-            <div class="footer-block-item">
+            <div class="footer-block-item" tabindex="0">
                 <h4 class="">Customer Information</h4>
                 <nav>
                     <ul class="outline footer-list">
@@ -111,7 +111,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="footer-block-item item_block">
+            <div class="footer-block-item item_block" tabindex="0">
                 <h4 class="">Connect</h4>
                 <form class="form-container"action="#" method="POST" class="">
                     <input name="mail" type="email" placeholder="Email">
@@ -149,12 +149,12 @@
                 </ul>
             </div>
         </div>   
-        <div class="footer-second-block">   
-            <div class="footer-copyright">
-                <div class="rating-item">
+        <div class="footer-second-block" tabindex="0">   
+            <div class="footer-copyright" tabindex="0">
+                <div class="rating-item" tabindex="0">
                     <p>Company Rating</p>
                 </div>
-                <div class="rating-item">
+                <div class="rating-item" tabindex="0">
                     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
@@ -171,10 +171,10 @@
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
                 </div>
-                <div class="copyright-item">   
+                <div class="copyright-item" tabindex="0">   
                     <p>Copyright © 2018 Dlk • Design Life Kids</p>
                 </div> 
-                <div class="copyright-item">
+                <div class="copyright-item" tabindex="0">
                     <a class="copyright-link" href="https://directline.digital/"> Web Design — Direct Line Development</a>
                 </div>
             </div>
