--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </header>
     <main>
         <section class="slider container">                   
-           <div class="slider-content">             
-                <div class="toggle-content">
+           <div class="slider-content" tabindex="0">             
+                <div class="toggle-content" tabindex="0">
                  <ul class="toggle-list">
                      <li class="toggle-item">
                         <svg width="51" height="44" viewBox="0 0 51 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -63,7 +63,7 @@
                      </li>
                  </ul>
              </div>                     
-            <div class="slider-first-block">  
+            <div class="slider-first-block" tabindex="0">  
                 <h1 class="page-title">THE OOH NOO COLLECTION</h1>
                 <p class="slider-item">Designed in Slovenia</p>
                 <button class=" button slider-btn slider-js">EXPLORE NOW</button>
@@ -76,7 +76,7 @@
                 <h2 class="products-title">Category Products</h2>
                 <ul class="outline products-list">
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                         <img src= "images/prod1.jpg" alt="" width="280" height="270">
                         <p class="title-link">APPAREL KIDS</p>
@@ -84,7 +84,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                <div class="container-link"> 
+                <div class="container-link" tabindex="0"> 
                     <a href="#">
                         <img src="images/prod2.jpg" alt="" width="280" height="270">
                         <p class="title-link">HOLIDAY SHOP</p>
@@ -92,7 +92,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                     <a href="#">
                         <img src="images/prod3.jpg" alt="" width="280" height="270">
                         <p class="title-link">TOYS</p>
@@ -100,7 +100,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                     <a href="#">
                         <img src="images/prod4.jpg" alt="" width="280" height="270">
                         <p class="title-link">ACCESSORIES</p>
@@ -108,7 +108,7 @@
                 </div>
                 </li>
             </ul>
-            <div class="products-info">
+            <div class="products-info" tabindex="0">
                 <button class="btn-control">  
                     <svg width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
@@ -121,17 +121,17 @@
                         <path d="M12 5L25 18L12 31" stroke="#1E0606" stroke-width="4"/>
                         </svg>                                      
                 </button>
-            <div>
+            <div tabindex="0">
                 <p class="info_item">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
             </div>
         </section>
         </section>
         <section class="delivery container">
             <img class="delivery-img" src="images/delivery.jpg" alt="" width="480" height="559">
-            <div class="delivery-info">
+            <div class="delivery-info" tabindex="0">
                 <h2 class="delivery-title">Delivery</h2>
-                <div class="delivery-tabs">
-                    <input  class="delivery-input" type="radio" name="tabs" id="tab-first" checked>
+                <div class="delivery-tabs" tabindex="0">
+                    <input  class="delivery-input" type="radio" name="tabs" id="tab-first">
                     <label class="tab-first" for="tab-first">
                         <p class="tabs-item checked">Delivery</p>
                     </label>
@@ -143,7 +143,7 @@
                     <label class="tab-third" for="tab-third">
                         <p class="tabs-item">Credit</p>
                     </label>
-                    <div class="tab-content-1" id="tab-content-1" class="tab-content">
+                    <div class="tab-content-1" class="tab-content" tabindex="0">
                         <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
                         </p>
                         <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
@@ -168,14 +168,14 @@
             </ul>    
         </section>
         <section class="about container">
-            <div class="about-content">
+            <div class="about-content" tabindex="0">
                 <h2 class="about-title">Design Life Kids</h2>
                 <h3 class="about-title-second">About Us</h3>
                 <p class="about-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.               
                 </p>
                 <a href="#" class="button about-btn">buy now</a>
             </div>        
-        <div class="contacts-content">
+        <div class="contacts-content" tabindex="0">
                 <h2 class="contacts-title">Contacts</h2>
                 <p class="contacts-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196" frameborder="0" style="border:0"></iframe>
@@ -183,9 +183,9 @@
     </section>
     </main>
     <footer class="footer wrapper">
-    <div class="footer-content container">
-        <div class="footer-first-block">
-            <div class="footer-block-item">
+    <div class="footer-content container" tabindex="0">
+        <div class="footer-first-block" tabindex="0">
+            <div class="footer-block-item" tabindex="0">
                 <h4>Navigation</h4>
                 <nav>
                     <ul class="outline footer-list">
@@ -198,7 +198,7 @@
                     </ul>
                 </nav>
             </div>
-        <div class="footer-block-item">
+        <div class="footer-block-item" tabindex="0">
             <h4>Customer Information</h4>
             <nav>
                 <ul class="outline footer-list">
@@ -211,7 +211,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="footer-block-item item_block">
+        <div class="footer-block-item item_block" tabindex="0">
             <h4 >Connect</h4>
             <form class="form-container"action="#" method="POST" class="">
                 <input name="mail" type="email" placeholder="Email">
@@ -249,12 +249,12 @@
             </ul>
         </div>
     </div>
-    <div class="footer-second-block">   
-        <div class="footer-copyright">
-            <div class="rating-item">
+    <div class="footer-second-block" tabindex="0">   
+        <div class="footer-copyright" tabindex="0">
+            <div class="rating-item" tabindex="0">
                 <p>Company Rating</p>
             </div>
-            <div class="rating-item">
+            <div class="rating-item" tabindex="0">
                 <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="#836E5B"/>
                 </svg>
@@ -271,10 +271,10 @@
                     <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                 </svg>
             </div>
-            <div class="copyright-item">   
+            <div class="copyright-item" tabindex="0">   
                 <p>Copyright © 2018 Dlk • Design Life Kids</p>
             </div> 
-            <div class="copyright-item">
+            <div class="copyright-item" tabindex="0">
                 <a class="copyright-link" href="https://directline.digital/"> Web Design — Direct Line Development</a>
             </div>
         </div>
@@ -282,40 +282,40 @@
 </div>
 </footer>
 
+
     
-    
-<div class="popup-overlay"></div>
-    <div class="popup-form">
+<div class="popup-overlay" tabindex="0"></div>
+    <div class="popup-form" tabindex="0">
         <h1 class="hidden">Modal window</h1>
         <button class="popup-close"><svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2.21902 14.6113C1.70029 15.1295 0.893368 15.1295 0.374636 14.6113C0.11527 14.3522 -6.13512e-07 14.0355 -5.9841e-07 13.69C-5.83308e-07 13.3445 0.11527 13.0278 0.374636 12.7687L5.64841 7.5L0.374637 2.23127C0.115271 1.97215 -7.23629e-08 1.65547 -5.72611e-08 1.30998C-4.21593e-08 0.964491 0.115271 0.647806 0.374637 0.388689C0.893369 -0.129545 1.70029 -0.129545 2.21902 0.388689L7.4928 5.65738L12.7666 0.38869C13.2853 -0.129545 14.0922 -0.129545 14.611 0.38869C15.1297 0.906924 15.1297 1.71304 14.611 2.23127L9.33718 7.5L14.611 12.7687C15.1297 13.287 15.1297 14.0931 14.611 14.6113C14.0922 15.1295 13.2853 15.1295 12.7666 14.6113L7.4928 9.34258L2.21902 14.6113Z" fill="white"/>
             </svg>
             </button>
         <form action="#" method="POST" class="contact-form">
-            <fieldset class="">
-                <div class="form-name">
+            <fieldset class="contact-container">
+                <div class="form-name" tabindex="0">
                     <label for="form-name" class="form-label">Name</label>
                     <input class="form-name" id="form-name" type="text" name="name" class="form-input" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
             <fieldset class="contact-wrapper">
-                <div class="contact-wrapper contact-block">  
+                <div class="contact-wrapper contact-block" tabindex="0">  
                     <label for="form-phone" class="form-label">Phone</label>                  
                     <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
                 </div>
-                <div class="contact-wrapper contact-block">   
+                <div class="contact-wrapper contact-block" tabindex="0">   
                     <label for="form-email" class="form-label">Email</label>                 
                     <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
             <fieldset class="contact-wrapper">
-                <div class="">
+                <div tabindex="0">
                     <label for="form-message" class="form-label">Message</label>                    
                     <textarea id="form-message" type="text" name="message" class="form-textarea" cols="30" rows="3"></textarea>                    
                 </div>
             </fieldset>
             <fieldset >
-                <div class="checkbox">
+                <div class="checkbox" tabindex="0">
                     <input class="input"  id="form-agreement" type="checkbox" name="agreement">
                     <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
