--- a/toys.html
+++ b/toys.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <h1 class="page-title container">Toy for kids</h1>
-        <div class="breadcrumbs container">
+        <div class="breadcrumbs container" tabindex="0">
             <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" href="#">Home</a>
@@ -50,9 +50,9 @@
             <h1 class="hidden">Filter</h1>
                 <form action="" method="POST" class="filter-form">
                             <fieldset> 
-                                <div class="filter-item">
+                                <div class="filter-item" tabindex="0">
                                     <legend>Cost</legend>  
-                                    <div class="range-slider">
+                                    <div class="range-slider" tabindex="0">
                                         <output for="fader" id="volume">0</output>
                                         <input class="fader" type="range" id="fader" min="0" max="600" step="1" value="0">
                                     </div>            
@@ -60,50 +60,50 @@
                             </fieldset>            
                             <fieldset>
                                 <legend>Color</legend>
-                                <div class="checkbox">
+                                <div class="checkbox" tabindex="0">
                                     <input class="input" type="checkbox" id="contant-black" checked>
                                     <label for="contant-black" tabindex="0">Black</label>
                                 </div>                                
-                                <div class="checkbox">
+                                <div class="checkbox" tabindex="0">
                                     <input class="input" type="checkbox" id="contant-blue">
                                     <label for="contant-blue" tabindex="0">Blue</label>
                                 </div>                
-                                <div class="checkbox">
+                                <div class="checkbox" tabindex="0">
                                     <input class="input" type="checkbox" id="contant-green">
                                     <label for="contant-green" tabindex="0">Green</label>                                    
                                 </div>  
-                                <div class="checkbox">
+                                <div class="checkbox" tabindex="0">
                                     <input class="input" type="checkbox" id="contant-white">
                                     <label for="contant-white" tabindex="0">White</label>
                                 </div>               
                             </fieldset>                                        
                             <fieldset>
                                 <legend>Delivery</legend>                                
-                                <div class="radiobox">
+                                <div class="radiobox" tabindex="0">
                                     <input class="radio" type="radio" name="radio" id="shipping-free">
                                     <label for="shipping-free"  tabindex="0">Free shipping</label>
                                 </div>                                
-                                <div class="radiobox">
+                                <div class="radiobox" tabindex="0">
                                     <input class="radio" type="radio" name="radio" id="shipping-fast">
                                     <label for="shipping-fast"  tabindex="0">Fast shipping</label>
                                 </div>
                             </fieldset>
                             <fieldset class="amount-box">
                                 <legend>Amount</legend>
-                                <div class="form-radio-btn ">
-                                    <input class="radio-amount" id="radio-1" type="radio" name="radio" value="1" checked>
+                                <div class="form-radio-btn" tabindex="0">
+                                    <input class="radio-amount" id="radio-1" type="radio" name="radio-amount" value="1" checked>
                                     <label  for="radio-1">0-5</label>
                                 </div>                                 
-                                <div class="form-radio-btn">
-                                    <input  class="amount" id="radio-2" type="radio" name="radio" value="2">
+                                <div class="form-radio-btn" tabindex="0">
+                                    <input  class="amount" id="radio-2" type="radio" name="radio-amount" value="2">
                                     <label for="radio-2">10-20</label>
                                 </div>                                 
-                                <div class="form-radio-btn">
-                                    <input  class="amount" id="radio-3" type="radio" name="radio" value="3">
+                                <div class="form-radio-btn" tabindex="0">
+                                    <input  class="amount" id="radio-3" type="radio" name="radio-amount" value="3">
                                     <label for="radio-3">20-50</label>
                                 </div>                                           
                             </fieldset>                                                               
-                            <div class="filter-item">
+                            <div class="filter-item" tabindex="0">
                             <button class="button" type="submit">Aply</button>
                             </div>
                             </div>
@@ -115,7 +115,7 @@
             <h2 class="hidden">Toys</h1>
             <ul class="outline products-list">
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                             <img class="products-img" src="images/toy1.jpg" alt="" width="380" height="385">
                         </a>
@@ -126,7 +126,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                             <img src="images/toy2.jpg" alt="" width="380" height="385">
                         </a>
@@ -137,7 +137,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                             <img src="images/toy3.jpg" alt="" width="380" height="385">
                         </a>
@@ -148,7 +148,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                             <img src="images/toy4.jpg" alt="" width="380" height="385">
                         </a>
@@ -159,7 +159,7 @@
                     </div>
                 </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                         <img src="images/toy5.jpg" alt="" width="380" height="385">
                     </a>
@@ -170,7 +170,7 @@
                     </div>
                    </li>
                 <li class="products-item">
-                    <div class="container-link">
+                    <div class="container-link" tabindex="0">
                         <a href="#">
                             <img src="images/toy6.jpg" alt="" width="380" height="382">
                         </a>
@@ -181,7 +181,8 @@
                     </div>
                 </li>
             </ul>
-            <div class="pagination">
+            <div class="pagination" tabindex="0">
+                <h2 class="hidden">Pagination</h2>
                 <a href="#">
                     <svg width="18" height="30" viewBox="0 0 18 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16 2L3 15L16 28" stroke="#1E0606" stroke-opacity="0.12" stroke-width="4"/>
@@ -212,9 +213,9 @@
         </section>       
     </main>
     <footer class="footer wrapper">
-        <div class="footer-content container">
-            <div class="footer-first-block">
-                <div class="footer-block-item">
+        <div class="footer-content container" tabindex="0">
+            <div class="footer-first-block" tabindex="0">
+                <div class="footer-block-item" tabindex="0">
                     <h4>Navigation</h4>
                     <nav>
                         <ul class="outline footer-list">
@@ -227,7 +228,7 @@
                         </ul>
                     </nav>
                 </div>
-            <div class="footer-block-item">
+            <div class="footer-block-item" tabindex="0">
                 <h4>Customer Information</h4>
                 <nav>
                     <ul class="outline footer-list">
@@ -240,7 +241,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="footer-block-item item_block">
+            <div class="footer-block-item item_block" tabindex="0">
                 <h4 >Connect</h4>
                 <form class="form-container"action="#" method="POST" class="">
                     <input name="mail" type="email" placeholder="Email">
@@ -278,12 +279,12 @@
                 </ul>
             </div>
         </div>   
-        <div class="footer-second-block">   
-            <div class="footer-copyright">
-                <div class="rating-item">
+        <div class="footer-second-block" tabindex="0">   
+            <div class="footer-copyright" tabindex="0">
+                <div class="rating-item" tabindex="0">
                     <p>Company Rating</p>
                 </div>
-                <div class="rating-item">
+                <div class="rating-item" tabindex="0">
                     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="#836E5B"/>
                     </svg>
@@ -300,10 +301,10 @@
                         <path d="M5.60845 0.927052C5.9078 0.0057416 7.21121 0.00574088 7.51056 0.927052L8.58013 4.21885H12.0413C13.0101 4.21885 13.4128 5.45846 12.6291 6.02786L9.82895 8.06231L10.8985 11.3541C11.1979 12.2754 10.1434 13.0415 9.35968 12.4721L6.55951 10.4377L3.75934 12.4721C2.97563 13.0415 1.92115 12.2754 2.2205 11.3541L3.29007 8.06231L0.4899 6.02787C-0.293814 5.45846 0.108961 4.21885 1.07768 4.21885H4.53888L5.60845 0.927052Z" fill="white"/>
                     </svg>
                 </div>
-                <div class="copyright-item">   
+                <div class="copyright-item" tabindex="0">   
                     <p>Copyright © 2018 Dlk • Design Life Kids</p>
                 </div> 
-                <div class="copyright-item">
+                <div class="copyright-item" tabindex="0">
                     <a class="copyright-link" href="https://directline.digital/"> Web Design — Direct Line Development</a>
                 </div>
             </div>
