Внесла правки по критериям оценивания версия1

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                         <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                     </div> 
                     <!-- <div  class="tab-content-2" id="tab-content-2" class="tab-content">
-                        <p>content-2</p>
+                        <p>рррррррррррррррррррррррррррррррррррррррррррррррррррррр tab-content-2</p>
                     </div> 
                     <div class="tab-content-3" id="tab-content-3" class="tab-content">
-                        <p>content-3</p>
+                        <p>nnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnnn content-3</p>
                     </div>  -->
                 </div>
                 <button class="button delivery-btn">LEARN MORE</button>
