Итоговая версия, внесены последние правки подключен min.css

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/common.min.css">
+    <link rel="stylesheet" href="css/contact.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">    
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -44,14 +44,14 @@
         </div>
         <section class="contacts-box">
             <h2 class="hidden">Contacts</h2>
-            <form action="#" method="POST" class="contact-form">
-            <fieldset class="contact-container">
+            <form action="#" method="POST" class="contact-form" tabindex="0">
+            <fieldset class="contact-container" tabindex="0">
                 <div class="form-name" tabindex="0">
                     <label for="form-name" class="form-label">Name</label>
                     <input class="form-name form-input" id="form-name" type="text" name="name" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper">
+            <fieldset class="contact-wrapper" tabindex="0">
                 <div class="contact-wrapper contact-block" tabindex="0">  
                     <label for="form-phone" class="form-label">Phone</label>                  
                     <input id="form-phone" type="tel" name="phone" class="form-input-phone" pattern="+7 (908) 296-13-78">                   
@@ -61,19 +61,19 @@
                     <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper">
+            <fieldset class="contact-wrapper" tabindex="0">
                 <div tabindex="0">
                     <label for="form-message" class="form-label">Message</label>                    
-                    <textarea id="form-message" name="message" class="form-textarea" cols="30" rows="3"></textarea>                    
+                    <textarea id="form-message" name="message" class="form-textarea" cols="30" rows="5"></textarea>                    
                 </div>
             </fieldset>
-            <fieldset >
+            <fieldset tabindex="0">
                 <div class="checkbox" tabindex="0">
                     <input class="input"  id="form-agreement" type="checkbox" name="agreement">
-                    <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
+                    <label  for="form-agreement" class="checkbox-label" tabindex="0"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
             </fieldset>
-            <button class="button" type="submit">Submit</button>
+            <button class="button form-button" type="submit">Submit</button>
         </form>                        
             <div class="support" tabindex="0">
                 <p>Our support team are on-hand to assist with any issues you are experiencing.</p>
