--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Main page</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/common.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">    
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,400;1,700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -120,11 +120,11 @@
                         <rect width="37" height="37" fill="#70BBDC" fill-opacity="0.2"/>
                         <path d="M12 5L25 18L12 31" stroke="#1E0606" stroke-width="4"/>
                         </svg>                                      
-                </button>
-                </div>
+                </button>                
             <div tabindex="0">
                 <p class="info_item">Modern finds for the modern home. Curated goods by unique designers around the world from fashion to furniture for kids and adults.</p>
             </div>
+        </div>   
         </section>          
         <section class="delivery container">
             <img class="delivery-img" src="images/delivery.jpg" alt="" width="480" height="559">
@@ -268,15 +268,6 @@
 </div>
 </footer>
 
-
-    
-
-
-
-
-
-
-
     
 <div class="popup-overlay" tabindex="0"></div>
     <div class="popup-form" tabindex="0">
@@ -285,14 +276,14 @@
             <path d="M2.21902 14.6113C1.70029 15.1295 0.893368 15.1295 0.374636 14.6113C0.11527 14.3522 -6.13512e-07 14.0355 -5.9841e-07 13.69C-5.83308e-07 13.3445 0.11527 13.0278 0.374636 12.7687L5.64841 7.5L0.374637 2.23127C0.115271 1.97215 -7.23629e-08 1.65547 -5.72611e-08 1.30998C-4.21593e-08 0.964491 0.115271 0.647806 0.374637 0.388689C0.893369 -0.129545 1.70029 -0.129545 2.21902 0.388689L7.4928 5.65738L12.7666 0.38869C13.2853 -0.129545 14.0922 -0.129545 14.611 0.38869C15.1297 0.906924 15.1297 1.71304 14.611 2.23127L9.33718 7.5L14.611 12.7687C15.1297 13.287 15.1297 14.0931 14.611 14.6113C14.0922 15.1295 13.2853 15.1295 12.7666 14.6113L7.4928 9.34258L2.21902 14.6113Z" fill="white"/>
             </svg>
             </button>
-        <form action="#" method="POST" class="contact-form">
-            <fieldset class="contact-container">
+        <form action="#" method="POST" class="contact-form" tabindex="0">
+            <fieldset class="contact-container" tabindex="0">
                 <div class="form-name" tabindex="0">
-                    <label for="form-name" class="form-label">Name</label>
+                    <label for="form-name" class="form-label" tabindex="0">Name</label>
                     <input class="form-name form-input" id="form-name" type="text" name="name" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper">
+            <fieldset class="contact-wrapper" tabindex="0">
                 <div class="contact-wrapper contact-block" tabindex="0">  
                     <label for="form-phone" class="form-label">Phone</label>                  
                     <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
@@ -302,13 +293,13 @@
                     <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper">
+            <fieldset class="contact-wrapper" tabindex="0">
                 <div tabindex="0">
                     <label for="form-message" class="form-label">Message</label>                    
-                    <textarea id="form-message" name="message" class="form-textarea" cols="30" rows="3"></textarea>                    
+                    <textarea id="form-message" name="message" class="form-textarea" cols="30" rows="5"></textarea>                    
                 </div>
             </fieldset>
-            <fieldset >
+            <fieldset tabindex="0">
                 <div class="checkbox" tabindex="0">
                     <input class="input"  id="form-agreement" type="checkbox" name="agreement">
                     <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
@@ -317,6 +308,6 @@
             <button class="button" type="submit">Submit</button>
         </form>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
