--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         </a>
         <nav class="header-nav">
             <ul class="outline header-list">
-                <li class="header-item"><a href="#">Blog</a></li> 
-                <li class="header-item"><a href="#">Catalog</a></li>
+                <li class="header-item"><a href="blog.html">Blog</a></li> 
+                <li class="header-item"><a href="catalog.html">Catalog</a></li>
                 <li class="header-item"><a href="#">About us</a></li>       
             </ul>
         </nav>
         <svg  tabindex="0" class="header-search" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M14.365 3.26001C10.945 3.26001 8.16497 6.08001 8.16497 9.52001C8.16497 10.98 8.66497 12.3 9.48497 13.38L3.60498 19.32C3.26498 19.68 3.26498 20.24 3.60498 20.58C3.78498 20.76 4.00498 20.84 4.22498 20.84C4.46498 20.84 4.68497 20.76 4.86497 20.58L10.745 14.62C11.765 15.36 13.005 15.78 14.345 15.78C17.765 15.78 20.545 12.96 20.545 9.52001C20.565 6.06001 17.785 3.26001 14.365 3.26001ZM14.365 14.2C11.825 14.2 9.76497 12.1 9.76497 9.52001C9.76497 6.94001 11.825 4.84001 14.365 4.84001C16.905 4.84001 18.965 6.94001 18.965 9.52001C18.965 12.1 16.905 14.2 14.365 14.2ZM17.465 9.60001C17.425 9.94001 17.125 10.2 16.785 10.2C16.745 10.2 16.725 10.2 16.685 10.2C16.305 10.14 16.045 9.80001 16.085 9.42001C16.225 8.38001 15.065 7.84001 15.005 7.82001C14.665 7.66001 14.505 7.24001 14.665 6.90001C14.825 6.56001 15.225 6.40001 15.585 6.54001C15.665 6.56001 17.745 7.52001 17.465 9.60001ZM16.005 11.12C16.145 11.26 16.245 11.48 16.245 11.68C16.245 11.9 16.165 12.1 16.005 12.24C15.865 12.38 15.645 12.48 15.445 12.48C15.245 12.48 15.025 12.4 14.885 12.24C14.745 12.1 14.645 11.88 14.645 11.68C14.645 11.48 14.725 11.26 14.885 11.12C15.025 10.98 15.245 10.88 15.445 10.88C15.645 10.88 15.845 10.96 16.005 11.12Z" fill="#1E0606"/>
         </svg>
-        <a class="header-contacts" href="#">Contact us</a>
+        <a class="header-contacts" href="contact.html">Contact us</a>
     </header>
     <main>
         <section class="slider container">                   
            <div class="slider-content" tabindex="0">             
                 <div class="toggle-content" tabindex="0">
+                    <div class="toggle-number">
+                    <svg width="51" height="44" viewBox="0 0 51 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.74 43.3C13.54 43.3 10.68 42.44 8.16 40.72C5.68 38.96 3.74 36.48 2.34 33.28C0.98 30.08 0.3 26.32 0.3 22C0.3 17.68 0.98 13.92 2.34 10.72C3.74 7.52 5.68 5.06 8.16 3.34C10.68 1.58 13.54 0.699997 16.74 0.699997C19.94 0.699997 22.78 1.58 25.26 3.34C27.78 5.06 29.72 7.52 31.08 10.72C32.48 13.92 33.18 17.68 33.18 22C33.18 26.32 32.48 30.08 31.08 33.28C29.72 36.48 27.78 38.96 25.26 40.72C22.78 42.44 19.94 43.3 16.74 43.3ZM16.74 40.48C19.38 40.48 21.7 39.76 23.7 38.32C25.74 36.84 27.32 34.72 28.44 31.96C29.56 29.16 30.12 25.84 30.12 22C30.12 18.16 29.56 14.86 28.44 12.1C27.32 9.3 25.74 7.18 23.7 5.74C21.7 4.26 19.38 3.52 16.74 3.52C14.1 3.52 11.76 4.26 9.72 5.74C7.72 7.18 6.16 9.3 5.04 12.1C3.92 14.86 3.36 18.16 3.36 22C3.36 25.84 3.92 29.16 5.04 31.96C6.16 34.72 7.72 36.84 9.72 38.32C11.76 39.76 14.1 40.48 16.74 40.48ZM50.2936 0.999997V43H47.2336V3.76H36.9736V0.999997H50.2936Z" fill="#1E0606" fill-opacity="0.05"/>
+                        </svg>
+                    </div>  
                  <ul class="toggle-list">
-                     <li class="toggle-item">
-                        <svg width="51" height="44" viewBox="0 0 51 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16.74 43.3C13.54 43.3 10.68 42.44 8.16 40.72C5.68 38.96 3.74 36.48 2.34 33.28C0.98 30.08 0.3 26.32 0.3 22C0.3 17.68 0.98 13.92 2.34 10.72C3.74 7.52 5.68 5.06 8.16 3.34C10.68 1.58 13.54 0.699997 16.74 0.699997C19.94 0.699997 22.78 1.58 25.26 3.34C27.78 5.06 29.72 7.52 31.08 10.72C32.48 13.92 33.18 17.68 33.18 22C33.18 26.32 32.48 30.08 31.08 33.28C29.72 36.48 27.78 38.96 25.26 40.72C22.78 42.44 19.94 43.3 16.74 43.3ZM16.74 40.48C19.38 40.48 21.7 39.76 23.7 38.32C25.74 36.84 27.32 34.72 28.44 31.96C29.56 29.16 30.12 25.84 30.12 22C30.12 18.16 29.56 14.86 28.44 12.1C27.32 9.3 25.74 7.18 23.7 5.74C21.7 4.26 19.38 3.52 16.74 3.52C14.1 3.52 11.76 4.26 9.72 5.74C7.72 7.18 6.16 9.3 5.04 12.1C3.92 14.86 3.36 18.16 3.36 22C3.36 25.84 3.92 29.16 5.04 31.96C6.16 34.72 7.72 36.84 9.72 38.32C11.76 39.76 14.1 40.48 16.74 40.48ZM50.2936 0.999997V43H47.2336V3.76H36.9736V0.999997H50.2936Z" fill="#1E0606" fill-opacity="0.05"/>
-                            </svg>  
-                </li>
-                     <li class="toggle-item">
+                    <li class="toggle-item"> 
                         <svg width="31" height="3" viewBox="0 0 31 3" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="30.9994" height="3" fill="#1E0606" fill-opacity="0.6"/>
                             </svg>
@@ -63,7 +63,7 @@
                  </ul>
              </div>                     
             <div class="slider-first-block" tabindex="0">  
-                <h1 class="page-title">THE OOH NOO COLLECTION</h1>
+                <h1 class="page-title slider-title">THE OOH NOO COLLECTION</h1>
                 <p class="slider-item">Designed in Slovenia</p>
                 <button class=" button slider-btn slider-js">EXPLORE NOW</button>
             </div>   
@@ -73,12 +73,12 @@
             </p>                                 
         </section>
         <section class="products container">
-                <h2 class="products-title">Category Products</h2>
+                <h2 class="page-title-two products-title">Category Products</h2>
                 <ul class="outline products-list">
                 <li class="products-item">      
                     <div class="container-link" tabindex="0">
                         <a href="#">
-                        <img src= "images/prod1.jpg" alt="" width="280" height="270">
+                        <img class="products-img-one" src= "images/prod1.jpg" alt="" width="280" height="270">
                         <p class="title-link">APPAREL KIDS</p>
                         </a>
                     </div>
@@ -86,15 +86,15 @@
                 <li class="products-item">
                 <div class="container-link" tabindex="0"> 
                     <a href="#">
-                        <img src="images/prod2.jpg" alt="" width="280" height="270">
+                        <img class="products-img-two" src="images/prod2.jpg" alt="" width="280" height="270">
                         <p class="title-link">HOLIDAY SHOP</p>
                     </a>
                     </div>
                 </li>
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
-                    <a href="#">
-                        <img src="images/prod3.jpg" alt="" width="280" height="270">
+                    <a href="toys.html">
+                        <img class="products-img-three" src="images/prod3.jpg" alt="" width="280" height="270">
                         <p class="title-link">TOYS</p>
                     </a>
                     </div>
@@ -102,7 +102,7 @@
                 <li class="products-item">
                     <div class="container-link" tabindex="0">
                     <a href="#">
-                        <img src="images/prod4.jpg" alt="" width="280" height="270">
+                        <img class="products-img-four" src="images/prod4.jpg" alt="" width="280" height="270">
                         <p class="title-link">ACCESSORIES</p>
                     </a>
                 </div>
@@ -129,21 +129,21 @@
         <section class="delivery container">
             <img class="delivery-img" src="images/delivery.jpg" alt="" width="480" height="559">
             <div class="delivery-info" tabindex="0">
-                <h2 class="delivery-title">Delivery</h2>
+                <h2 class=" page-title-two delivery-title">Delivery</h2>
                 <div class="delivery-tabs" tabindex="0">                    
                         <p class="tabs-item checked">Delivery</p>                    
                         <p class="tabs-item">Guarantee</p>                    
                         <p class="tabs-item">Credit</p>
-                        <p>Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
+                        <p class="tabs-item-content-one">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.
                         </p>
-                        <p>What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!                            
+                        <p class="tabs-item-content-two">What started as an outlet to deal  with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!                            
                         </p>                    
                 </div>
                 <button class="button delivery-btn">LEARN MORE</button>
             </div>
         </section>
         <section class="brands container">
-            <h2 class="hidden" tabindex="0">Brands</h2>
+            <h2 class="hidden">Brands</h2>
             <ul class="outline brands-list">
                 <li class="brands-item"><img src="images/brand1.png" alt="" width="193" height="60"></li>
                 <li class="brands-item"><img src="images/brand2.png" alt="" width="179" height="61"></li>
@@ -153,15 +153,15 @@
         </section>
         <section class="about container">
             <div class="about-content" tabindex="0">
-                <h2 class="about-title">Design Life Kids</h2>
+                <h2 class="page-title-two about-title">Design Life Kids</h2>
                 <h3 class="about-title-second">About Us</h3>
                 <p class="about-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical. 
                 </p>
                 <a href="#" class="button about-btn">buy now</a>
             </div>        
         <div class="contacts-content" tabindex="0">
-                <h2 class="contacts-title">Contacts</h2>
-                <p class="contacts-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.                    
+                <h2 class="page-title-two contacts-title">Contacts</h2>
+                <p class="contacts-item">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.                     
                 </p>
                 <iframe class="map" src="https://yandex.ru/map-widget/v1/?um=constructor%3Ae975d5d0230c97fc17fe4170bcd64da9bd5d640035324b55dcba715d358a7b22&amp;source=constructor" width="483" height="196"></iframe>
         </div>
@@ -240,7 +240,7 @@
                 <p>Company Rating</p>
             </div>            
                 <div class="rating-wrapper" tabindex="0">        
-                    <div class="rating-wrapper-items">
+                    <div class="rating-wrapper-items" tabindex="0">
                       <input class="rating-wrapper-item" type="radio" name="radio" id="rating-item-5" value="5">
                       <label class="rating-wrapper-label" for="rating-item-5"  tabindex="0"></label>
                 
@@ -276,14 +276,14 @@
             <path d="M2.21902 14.6113C1.70029 15.1295 0.893368 15.1295 0.374636 14.6113C0.11527 14.3522 -6.13512e-07 14.0355 -5.9841e-07 13.69C-5.83308e-07 13.3445 0.11527 13.0278 0.374636 12.7687L5.64841 7.5L0.374637 2.23127C0.115271 1.97215 -7.23629e-08 1.65547 -5.72611e-08 1.30998C-4.21593e-08 0.964491 0.115271 0.647806 0.374637 0.388689C0.893369 -0.129545 1.70029 -0.129545 2.21902 0.388689L7.4928 5.65738L12.7666 0.38869C13.2853 -0.129545 14.0922 -0.129545 14.611 0.38869C15.1297 0.906924 15.1297 1.71304 14.611 2.23127L9.33718 7.5L14.611 12.7687C15.1297 13.287 15.1297 14.0931 14.611 14.6113C14.0922 15.1295 13.2853 15.1295 12.7666 14.6113L7.4928 9.34258L2.21902 14.6113Z" fill="white"/>
             </svg>
             </button>
-        <form action="#" method="POST" class="contact-form" tabindex="0">
-            <fieldset class="contact-container" tabindex="0">
+        <form action="#" method="POST" class="contact-form">
+            <fieldset class="contact-container">
                 <div class="form-name" tabindex="0">
                     <label for="form-name" class="form-label" tabindex="0">Name</label>
                     <input class="form-name form-input" id="form-name" type="text" name="name" placeholder="Ivan Ivanov">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper" tabindex="0">
+            <fieldset class="contact-wrapper">
                 <div class="contact-wrapper contact-block" tabindex="0">  
                     <label for="form-phone" class="form-label">Phone</label>                  
                     <input id="form-phone" type="tel" name="phone" class="form-input" pattern="+7 (908) 296-13-78">                   
@@ -293,14 +293,14 @@
                     <input id="form-email" type="text" name="email" class="form-input">                    
                 </div>
             </fieldset>
-            <fieldset class="contact-wrapper" tabindex="0">
+            <fieldset class="contact-wrapper">
                 <div tabindex="0">
                     <label for="form-message" class="form-label">Message</label>                    
                     <textarea id="form-message" name="message" class="form-textarea" cols="30" rows="5"></textarea>                    
                 </div>
             </fieldset>
-            <fieldset tabindex="0">
-                <div class="checkbox" tabindex="0">
+            <fieldset>
+                <div class="checkbox-agreement" tabindex="0">
                     <input class="input"  id="form-agreement" type="checkbox" name="agreement">
                     <label  for="form-agreement" class="checkbox-label"><span>By clicking on the button, you consent to the processing of your personal data</span></label>
                 </div>
