Итоговая версия на проверку

--- a/toys.html
+++ b/toys.html
@@ -72,8 +72,8 @@
                             </fieldset>            
                             <fieldset>
                                 <legend>Color</legend>
-                                <div class="checkbox">
-                                    <input class="input" type="checkbox" id="contant-black">
+                                <div class="checkbox" tabindex="0">
+                                    <input class="input" type="checkbox" id="contant-black" >
                                     <label for="contant-black">Black</label>
                                 </div>                                
                                 <div class="checkbox" tabindex="0">
@@ -91,7 +91,7 @@
                             </fieldset>                                        
                             <fieldset>
                                 <legend>Delivery</legend>                                
-                                <div class="radiobox">
+                                <div class="radiobox"  tabindex="0">
                                     <input class="radio" type="radio" name="radio" id="shipping-free">
                                     <label for="shipping-free">Free shipping</label>
                                 </div>                                
